force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__RollupOtherUnreceivedBalUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RollupOtherUnreceivedBalUSD__c</fullName>
    <label>ROLLUP OTHER UNRECEIVED BAL(USD)</label>
    <summarizedField>clofor_com_cfs__OtherPayReq__c.clofor_com_cfs__UnreceivedBalOfOtherUSDTrxPlan__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__OtherPayReq__c.clofor_com_cfs__PaymentRequestID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>