force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__RollupPIUnpaidBalanceUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RollupPIUnpaidBalanceUSD__c</fullName>
    <label>ROLLUP P/I UNPAID BAL(USD)</label>
    <summarizedField>clofor_com_cfs__PurInvPayReq__c.clofor_com_cfs__UnpaidBalancePIUSDPayReq__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__PurInvPayReq__c.clofor_com_cfs__PaymentRequestID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>