force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__RollupPlannedObligationDeclaration__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RollupPlannedObligationDeclaration__c</fullName>
    <label>ROLLUP PLANNED OBLIGATION DECLARATION</label>
    <summarizedField>clofor_com_cfs__ObligationPaymentReq__c.clofor_com_cfs__PlannedAmountForPeriodPayReq__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__ObligationPaymentReq__c.clofor_com_cfs__PaymentRequestID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>