force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__RollupTotalLoanRepayment__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RollupTotalLoanRepayment__c</fullName>
    <label>ROLLUP TOTAL LOAN REPAYMENT</label>
    <summarizedField>clofor_com_cfs__LoanPayPayReq__c.clofor_com_cfs__TotalAmountOfLoanRepaymentPayReq__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__LoanPayPayReq__c.clofor_com_cfs__PaymentRequestID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>