force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__RollupWMSUnpaidBalOfBuyingUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RollupWMSUnpaidBalOfBuyingUSD__c</fullName>
    <label>ROLLUP WMS UNPAID BAL OF BUYING(USD)</label>
    <summarizedField>clofor_com_cfs__WMSBillPayReq__c.clofor_com_cfs__WMSUnpaidBalOfBuyingUSDPayReq__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__WMSBillPayReq__c.clofor_com_cfs__PaymentRequestID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>