force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__RollupWMSUnreceivedBalOfSellUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RollupWMSUnreceivedBalOfSellUSD__c</fullName>
    <label>ROLLUP WMS UNRECEIVED BAL SELLING(USD)</label>
    <summarizedField>clofor_com_cfs__WMSBillPayReq__c.clofor_com_cfs__WMSUnreceivedBalOfSellingUSDTrx__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__WMSBillPayReq__c.clofor_com_cfs__PaymentRequestID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>