force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__RUOffsetProcessedSellingAmountLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RUOffsetProcessedSellingAmountLocal__c</fullName>
    <label>Offset Processed Selling Amount(Local)</label>
    <summarizedField>clofor_com_cfs__FMSBillPayReq__c.clofor_com_cfs__OffsetProcessedSellingAmountLocal__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__FMSBillPayReq__c.clofor_com_cfs__PaymentRequestID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>