force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__ScheduledReturnDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ScheduledReturnDate__c</fullName>
    <label>SCHEDULED RETURN DATE</label>
    <type>Date</type>
</CustomField>