force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__TransportType__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TransportType__c</fullName>
    <label>Transport Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__TransportType</valueSetName>
    </valueSet>
</CustomField>