force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__TrxPlanDifferenceFCY__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TrxPlanDifferenceFCY__c</fullName>
    <formula>clofor_com_cfs__AmountUSD__c - clofor_com_cfs__AmountAdvancedPaidFCY__c + clofor_com_cfs__AdditionalAmountPayFCY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trx Plan Difference(FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>