force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__TrxPlanDifferenceLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TrxPlanDifferenceLocal__c</fullName>
    <formula>clofor_com_cfs__AmountLocal__c - clofor_com_cfs__AmountAdvancedPaidLocal__c +  clofor_com_cfs__AdditionalAmountPay__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trx Plan Difference(Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>