force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__TrxPlanType__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TrxPlanType__c</fullName>
    <label>Trx Plan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment Request</fullName>
            </value>
            <value>
                <fullName>Collection Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>