force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__UnpaidBalBuyAfterOffsetFCY__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__UnpaidBalBuyAfterOffsetFCY__c</fullName>
    <formula>clofor_com_cfs__RollupFMSUnpaidBalOfBuyingUSD__c  +
clofor_com_cfs__RollupWMSUnpaidBalOfBuyingUSD__c -
clofor_com_cfs__RollupFMSUnreceivedBalOfSellUSD__c - 
clofor_com_cfs__RollupWMSUnreceivedBalOfSellUSD__c +  clofor_com_cfs__RollupKickbackUnpaidBalanceUSD__c +
clofor_com_cfs__RollupPIUnpaidBalanceUSD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unpaid Bal of Buying after Offset(FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>