force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__UnpaidBalBuyAfterOffsetLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__UnpaidBalBuyAfterOffsetLocal__c</fullName>
    <formula>clofor_com_cfs__RollupFMSUnpaidBalOfBuyingLocal__c +
clofor_com_cfs__RollupWMSUnpaidBalOfBuyingLocal__c -
clofor_com_cfs__RollupFMSUnreceivedBalOfSellLocal__c - 
clofor_com_cfs__RollupWMSUnreceivedBalOfSellLocal__c +  clofor_com_cfs__RollupKickbackUnpaidBalanceLocal__c +
clofor_com_cfs__RollupOtherUnpaidBalance__c +
clofor_com_cfs__RollupPIUnpaidBalanceLocal__c +
clofor_com_cfs__RollupTotalLoanRepayment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unpaid Bal of Buying after Offset(Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>