force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/CollectedAmountJPY__c.field-meta.xml
<CustomField>
    <fullName>CollectedAmountJPY__c</fullName>
    <label>Collected Amount (JPY)</label>
    <summarizedField>Transaction__c.AmountCollectedJPY__c</summarizedField>
    <summaryForeignKey>Transaction__c.PaymentRequest__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>