force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <formula>TEXT( clofor_com_cfs__PaymentTo__r.Country__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Reference from Account of Payment to</inlineHelpText>
    <label>Country</label>
    <type>Text</type>
</CustomField>