force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/Different_amount_Local__c.field-meta.xml
<CustomField>
    <fullName>Different_amount_Local__c</fullName>
    <formula>clofor_com_cfs__AmountAdvancedPaidLocal__c  +  clofor_com_cfs__ActualAmountPaidLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Different amount(Local)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>