force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/Get_Link__c.field-meta.xml
<CustomField>
    <fullName>Get_Link__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_450, FIND(&apos;/services&apos;, $Api.Partner_Server_URL_450)) + CASESAFEID( Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Get Link</label>
    <type>Text</type>
</CustomField>