force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/Job_ID__c.field-meta.xml
<CustomField>
    <fullName>Job_ID__c</fullName>
    <label>Job ID</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>