force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/Liquidation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Liquidation_Notes__c</fullName>
    <label>Liquidation Notes</label>
    <type>TextArea</type>
</CustomField>