force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/Manager_approve_date__c.field-meta.xml
<CustomField>
    <fullName>Manager_approve_date__c</fullName>
    <label>Manager approve date</label>
    <type>DateTime</type>
</CustomField>