force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/Manager_approve_status__c.field-meta.xml
<CustomField>
    <fullName>Manager_approve_status__c</fullName>
    <label>Manager approve status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>✔️</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>