force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/MBLNumber__c.field-meta.xml
<CustomField>
    <fullName>MBLNumber__c</fullName>
    <label>M B/L Number</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>