force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/PaidAmountJPY__c.field-meta.xml
<CustomField>
    <fullName>PaidAmountJPY__c</fullName>
    <label>Paid Amount (JPY)</label>
    <summarizedField>Transaction__c.AmountPaidJPY__c</summarizedField>
    <summaryForeignKey>Transaction__c.PaymentRequest__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>