force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/PaidAmountUSD__c.field-meta.xml
<CustomField>
    <fullName>PaidAmountUSD__c</fullName>
    <label>Paid Amount (USD)</label>
    <summarizedField>Transaction__c.AmountPaidUSD__c</summarizedField>
    <summaryForeignKey>Transaction__c.PaymentRequest__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>