force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Choose Bank with checkbox Internal Bank Account is ticked</inlineHelpText>
    <label>Payment Method</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>clofor_com_cfs__BankAccount__c.InternalBankAccount__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>clofor_com_cfs__BankAccount__c</referenceTo>
    <relationshipLabel>Payment Request (Payment Method)</relationshipLabel>
    <relationshipName>Payment_Request1</relationshipName>
    <type>Lookup</type>
</CustomField>