force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/Submit_Date__c.field-meta.xml
<CustomField>
    <fullName>Submit_Date__c</fullName>
    <label>Submit Date</label>
    <type>DateTime</type>
</CustomField>