force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/Submit_Status__c.field-meta.xml
<CustomField>
    <fullName>Submit_Status__c</fullName>
    <label>Submit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <label>✔️</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>