force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/SwiftCode__c.field-meta.xml
<CustomField>
    <fullName>SwiftCode__c</fullName>
    <formula>BeneficiaryBankAccount__r.clofor_com_cfs__SwiftCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Swift Code</label>
    <type>Text</type>
</CustomField>