force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/TotalAmountUSD__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountUSD__c</fullName>
    <formula>PaidAmountUSD__c + TransferedFeeAmountUSD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount (USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>