force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/Transfer_to_Company__c.field-meta.xml
<CustomField>
    <fullName>Transfer_to_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transfer to-Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TRX Plan (Transfer to-Company)</relationshipLabel>
    <relationshipName>TRX_Plan</relationshipName>
    <type>Lookup</type>
</CustomField>