force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/TransferedFeeAmount__c.field-meta.xml
<CustomField>
    <fullName>TransferedFeeAmount__c</fullName>
    <label>Transfered Fee Amount (JPY)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>