force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/TransferedFeeAmountUSD__c.field-meta.xml
<CustomField>
    <fullName>TransferedFeeAmountUSD__c</fullName>
    <label>Transfered Fee Amount (USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>