force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/UnpaidAmountUSD__c.field-meta.xml
<CustomField>
    <fullName>UnpaidAmountUSD__c</fullName>
    <formula>clofor_com_cfs__ActualAmountforPaymentFCY__c -  clofor_com_cfs__AmountUSD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unpaid Amount(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>