force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/Update_Exchange_rate_to_Com_billing__c.field-meta.xml
<CustomField>
    <fullName>Update_Exchange_rate_to_Com_billing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Exchange rate to Com billing</label>
    <type>Checkbox</type>
</CustomField>