force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/recordTypes/clofor_com_cfs__AdvancePayRequestFCY.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__AdvancePayRequestFCY</fullName>
    <active>false</active>
    <label>Advance Payment Request-FCY</label>
</RecordType>