force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/recordTypes/clofor_com_cfs__AdvancePayRequestLocal.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__AdvancePayRequestLocal</fullName>
    <active>false</active>
    <label>Advance Payment Request-Local</label>
</RecordType>