force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/recordTypes/clofor_com_cfs__CollectionPlanLocalCurrency.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__CollectionPlanLocalCurrency</fullName>
    <active>false</active>
    <label>Collection Plan-Local Currency</label>
</RecordType>