force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/recordTypes/clofor_com_cfs__CollectionPlanUSDCurrency.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__CollectionPlanUSDCurrency</fullName>
    <active>false</active>
    <label>Collection Plan-USD Currency</label>
</RecordType>