force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/recordTypes/clofor_com_cfs__LiquidationRequestFCY.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__LiquidationRequestFCY</fullName>
    <active>false</active>
    <label>Liquidation Request-FCY</label>
</RecordType>