force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/recordTypes/clofor_com_cfs__LiquidationRequestLocal.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__LiquidationRequestLocal</fullName>
    <active>false</active>
    <label>Liquidation Request-Local</label>
</RecordType>