force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/recordTypes/clofor_com_cfs__PaymentRequestlocalCurrency.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__PaymentRequestlocalCurrency</fullName>
    <active>true</active>
    <label>Payment Request-Local Currency</label>
</RecordType>