force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/recordTypes/clofor_com_cfs__PaymentRequestUSDCurrency.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__PaymentRequestUSDCurrency</fullName>
    <active>true</active>
    <label>Payment Request-USD Currency</label>
</RecordType>