force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/validationRules/clofor_com_cfs__Max_No_of_Days_after_Payment_Request.validationRule-meta.xml
<ValidationRule>
    <fullName>clofor_com_cfs__Max_No_of_Days_after_Payment_Request</fullName>
    <active>false</active>
    <errorConditionFormula>and(clofor_com_cfs__LiquidationTargetMaxNoDays__c   &lt;  0,  RecordType.DeveloperName =&quot;AdvancePayRequestLocal&quot;)</errorConditionFormula>
    <errorDisplayField>clofor_com_cfs__CashAdvanceID__c</errorDisplayField>
    <errorMessage>There is a previous advanced request which is not processed liquidation more than Liquidation target date.</errorMessage>
</ValidationRule>