force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/validationRules/CollectedAmountLessAmount_CollectionPlan.validationRule-meta.xml
<ValidationRule>
    <fullName>CollectedAmountLessAmount_CollectionPlan</fullName>
    <active>true</active>
    <errorConditionFormula>IF( AND(ISPICKVAL( clofor_com_cfs__TrxPlanType__c , &apos;Collection Plan&apos;),CollectedAmountJPY__c&gt;0, clofor_com_cfs__AmountLocal__c &lt;&gt; 0), CollectedAmountJPY__c &gt; ABS( clofor_com_cfs__AmountLocal__c ), null)</errorConditionFormula>
    <errorDisplayField>clofor_com_cfs__AmountLocal__c</errorDisplayField>
    <errorMessage>The Collected Amount (JPY) must be less than or equal Amount (JPY)</errorMessage>
</ValidationRule>