force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/validationRules/Lock_after_approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_after_approved</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( PRIORVALUE( clofor_com_cfs__ApprovalStatus__c), &apos;Approved&apos;),
OR(
ISCHANGED(RecordTypeId),
ISCHANGED( clofor_com_cfs__ACCOUNTANT__c ),
ISCHANGED(clofor_com_cfs__PaymentDueDate__c),
ISCHANGED( AccountingManager__c ),
ISCHANGED( clofor_com_cfs__ActualAmountforCollectionFCY__c ),
ISCHANGED( clofor_com_cfs__ActualAmountforCollectionLocal__c ),
ISCHANGED( clofor_com_cfs__ActualAmountforPaymentFCY__c ),
ISCHANGED( clofor_com_cfs__ActualReturnedDate__c ),
ISCHANGED( clofor_com_cfs__AdditionalAmountPayFCY__c ),
ISCHANGED( clofor_com_cfs__AdditionalAmountPay__c ),
ISCHANGED( clofor_com_cfs__AmountLocal__c ),
ISCHANGED( clofor_com_cfs__AmountUSD__c ),
ISCHANGED( clofor_com_cfs__AmountAdvancedPaidFCY__c ),
ISCHANGED( clofor_com_cfs__AmountAdvancedPaidLocal__c ),
ISCHANGED( Amount_requested__c ),
ISCHANGED( Amount_requested_USD__c ),
ISCHANGED( Amount_requested_VND__c ),
ISCHANGED( clofor_com_cfs__ApprovalStatus__c ),
ISCHANGED( clofor_com_cfs__AutoConnectSourceToTransaction__c ),
ISCHANGED( clofor_com_cfs__BankID__c ),
ISCHANGED( clofor_com_cfs__BankCharges__c ),
ISCHANGED( BeneficiaryBankAccount__c ),
ISCHANGED( Beneficiary_information__c ),
ISCHANGED( clofor_com_cfs__CashID__c ),
ISCHANGED( clofor_com_cfs__CashAdvanceID__c ),
ISCHANGED( clofor_com_cfs__CostEvidence__c ),
ISCHANGED( clofor_com_cfs__CostType__c ),
ISCHANGED( clofor_com_cfs__CreditACName__c ),
ISCHANGED( clofor_com_cfs__CreditACNumber__c ),
ISCHANGED( clofor_com_cfs__CreditBankBranchName__c ),
ISCHANGED( clofor_com_cfs__Currency__c ),
ISCHANGED( clofor_com_cfs__DebitAC__c ),
ISCHANGED( clofor_com_cfs__DepositOffsetID__c ),
ISCHANGED( clofor_com_cfs__PaymentDescription__c ),
ISCHANGED( clofor_com_cfs__ExpectedReturnAmountFCY__c ),
ISCHANGED( clofor_com_cfs__ExpectedReturnAmountLocal__c ),
ISCHANGED( PR_External_Folder_ID__c ),
ISCHANGED( clofor_com_cfs__ExternalRequester__c ),
ISCHANGED( clofor_com_cfs__ExternalRequesterManager__c ),
ISCHANGED( clofor_com_cfs__InternalUser__c ),
ISCHANGED( clofor_com_cfs__InternalRequestManager__c ),
ISCHANGED( clofor_com_cfs__InvoiceTo__c ),
ISCHANGED( Job_ID__c ),
ISCHANGED( clofor_com_cfs__LoanID__c ),
ISCHANGED( clofor_com_cfs__Lock_Attachment__c ),
ISCHANGED( MBLNumber__c ),
ISCHANGED( Manager_approve_date__c ),
ISCHANGED( Manager_approve_status__c ),
ISCHANGED( Money_TRF__c ),
ISCHANGED( clofor_com_cfs__NotesinDocument__c ),
ISCHANGED( clofor_com_cfs__OffsetProcessPayableTrxOut__c ),
ISCHANGED( clofor_com_cfs__OffsetProcessReceivableTrxIn__c ),
ISCHANGED( clofor_com_cfs__PayableCompleted__c ),
ISCHANGED( clofor_com_cfs__PaymentConfirmedTrxOut__c ),
ISCHANGED( PaymentMethod__c ),
ISCHANGED( Payment_Notes__c ),
ISCHANGED( clofor_com_cfs__PaymentTo__c ),
ISCHANGED( clofor_com_cfs__RequesterDepartment__c),
ISCHANGED( clofor_com_cfs__PaymentType__c ),
ISCHANGED( clofor_com_cfs__AmountUSDForCollection__c ),
ISCHANGED( clofor_com_cfs__AmountLocalForCollection__c ),
ISCHANGED( clofor_com_cfs__AmountCollectTextUSD__c ),
ISCHANGED( clofor_com_cfs__AmountCollectTextLocal__c ),
ISCHANGED(clofor_com_cfs__AmountTextLocal__c ),
ISCHANGED(clofor_com_cfs__AmountPayTextUSD__c ),
ISCHANGED(clofor_com_cfs__PreviousTrxPlanID__c ),
ISCHANGED(clofor_com_cfs__ProcessPayableLiquidation__c ),
ISCHANGED( clofor_com_cfs__ReceiptConfirmedTrxIn__c ),
ISCHANGED(clofor_com_cfs__RequestedDate__c ),
ISCHANGED(clofor_com_cfs__RequesterAddress__c ),
ISCHANGED(clofor_com_cfs__RequesterDepartment__c ),
ISCHANGED(clofor_com_cfs__ReturnedAmountFCY__c ),
ISCHANGED(clofor_com_cfs__ReturnedAmountLocal__c ),
ISCHANGED(clofor_com_cfs__PlannedProcessingDate__c),
ISCHANGED(TranferFee__c),
ISCHANGED(clofor_com_cfs__ScheduledReturnDate__c )))</errorConditionFormula>
    <errorMessage>Can not edit because this Payment Request has been approved, please contact Approver!</errorMessage>
</ValidationRule>