force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/validationRules/PaidAmountLessAmount_PaymentRequest.validationRule-meta.xml
<ValidationRule>
    <fullName>PaidAmountLessAmount_PaymentRequest</fullName>
    <active>true</active>
    <errorConditionFormula>IF( AND(ISPICKVAL(clofor_com_cfs__TrxPlanType__c, &apos;Payment Request&apos;) ,PaidAmountJPY__c &gt; 0,clofor_com_cfs__AmountLocal__c&gt;0)  ,  PaidAmountJPY__c &gt;  clofor_com_cfs__AmountLocal__c, null)</errorConditionFormula>
    <errorDisplayField>clofor_com_cfs__AmountLocal__c</errorDisplayField>
    <errorMessage>The Paid Amount (JPY) must be less than or equal Amount (JPY)</errorMessage>
</ValidationRule>