force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/validationRules/PreventUserTickCheckboxMoneyTRF1.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventUserTickCheckboxMoneyTRF1</fullName>
    <active>false</active>
    <errorConditionFormula>IF(AND(ISPICKVAL( clofor_com_cfs__TrxPlanType__c , &apos;Payment Request&apos;),  RecordType.Name = &apos;Payment Request-Local Currency&apos;, PaidAmountJPY__c &gt; 0,  clofor_com_cfs__AmountLocal__c &gt; 0),  PaidAmountJPY__c  &lt;&gt; clofor_com_cfs__AmountLocal__c, null)</errorConditionFormula>
    <errorMessage>This Payment Request is not fully paid. Please check again before update Money Transfered</errorMessage>
</ValidationRule>