force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/validationRules/PreventUserTickCheckboxMoneyTRF2.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventUserTickCheckboxMoneyTRF2</fullName>
    <active>false</active>
    <errorConditionFormula>IF(AND(ISPICKVAL( clofor_com_cfs__TrxPlanType__c , &apos;Payment Request&apos;),  RecordType.Name  = &apos;Payment Request-USD Currency&apos;,   PaidAmountUSD__c  &gt; 0,   clofor_com_cfs__AmountUSD__c  &gt; 0 ),  PaidAmountUSD__c  &lt;&gt; clofor_com_cfs__AmountUSD__c, null)</errorConditionFormula>
    <errorMessage>This Payment Request is not fully paid. Please check again before update Money Transfered</errorMessage>
</ValidationRule>