force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/validationRules/PreventUserTickCheckboxMoneyTRF3.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventUserTickCheckboxMoneyTRF3</fullName>
    <active>false</active>
    <errorConditionFormula>IF(AND(ISPICKVAL( clofor_com_cfs__TrxPlanType__c , &apos;Collection Plan&apos;),  RecordType.Name= &apos;Payment Request-Local Currency&apos;,   CollectedAmountJPY__c  &gt; 0,  clofor_com_cfs__AmountLocal__c &lt;&gt; 0 ),  CollectedAmountJPY__c &lt;&gt;  ABS( clofor_com_cfs__AmountLocal__c) , null)</errorConditionFormula>
    <errorMessage>This Payment Request is not fully collected. Please check again before update Money Transfered</errorMessage>
</ValidationRule>