force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__PaymentRequestStatus__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>clofor_com_cfs__PaymentDescription__c</columns>
    <columns>clofor_com_cfs__InternalUser__c</columns>
    <columns>clofor_com_cfs__AmountLocal__c</columns>
    <columns>clofor_com_cfs__AmountUSD__c</columns>
    <columns>clofor_com_cfs__PaymentDueDate__c</columns>
    <columns>clofor_com_cfs__CreditACName__c</columns>
    <columns>clofor_com_cfs__ACCOUNTANT__c</columns>
    <columns>clofor_com_cfs__PaymentType__c</columns>
    <columns>clofor_com_cfs__PlannedProcessingDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>